--- a/index.html
+++ b/index.html
@@ -163,17 +163,17 @@ h2, p {
 
 <ul>
 
-  	<li> <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\Home Page.html"> Home</a></li>
-  	<li> <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\Ze About Us.html"> About Us</a></li>
+  	<li> <a href="index.html"> Home</a></li>
+  	<li> <a href=" About Us.html"> About Us</a></li>
   
 	<li class="dropdown">
-	<a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\Recent Projects.html">Recent Projects</a>
+	<a href="Recent Projects.html">Recent Projects</a>
 
    <div class="dropdown-content">
 
-      <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\MYP3 Paper Bag Project.html"> MYP3 Paper bag Project </a>
-      <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\MYP1 Compost Making.html">MYP1 Compost making</a>
-      <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\PYP Plantation Drive.html">PYP Plantation drive</a>
+      <a href="MYP3 Paper Bag Project.html"> MYP3 Paper bag Project </a>
+      <a href="MYP1 Compost Making.html">MYP1 Compost making</a>
+      <a href="PYP Plantation Drive.html">PYP Plantation drive</a>
 
     </div>
 
