--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@ h2, p {
   <!-- Add YouTube icon -->
   <a href="#" class="fa fa-youtube"></a>
   <!-- Your existing social icons -->
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-instagram"></a>
-  <a href="#" class="fa fa-linkedin"></a>
+  <a href="www.facebook.com" class="fa fa-facebook"></a>
+  <a href="www.twitter.com" class="fa fa-twitter"></a>
+  <a href="www.instagram.com" class="fa fa-instagram"></a>
+  <a href="www.linkedin.com" class="fa fa-linkedin"></a>
 </div>
 
 </body>
