--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ h2, p {
  
   <!-- Add the image -->
   <div class="center-image">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\e1.png" style="width:75%">
+    <img src="e1.png" style="width:75%">
   </div>
 </div>
 
