--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ h2, p {
 <ul>
 
   	<li> <a href="index.html"> Home</a></li>
-  	<li> <a href=" About Us.html"> About Us</a></li>
+  	<li> <a href=" Ze About Us.html"> About Us</a></li>
   
 	<li class="dropdown">
 	<a href="Recent Projects.html">Recent Projects</a>
