--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ h2, p {
 <ul>
 
   	<li> <a href="index.html"> Home</a></li>
-  	<li> <a href=" Ze About Us.html"> About Us</a></li>
+  	<li> <a href="Ze About Us.html"> About Us</a></li>
   
 	<li class="dropdown">
 	<a href="Recent Projects.html">Recent Projects</a>
@@ -196,7 +196,7 @@ h2, p {
 
 <div class="icon-bar">
   <!-- Add YouTube icon -->
-  <a href="#" class="fa fa-youtube"></a>
+  <a href="www.youtube.com" class="fa fa-youtube"></a>
   <!-- Your existing social icons -->
   <a href="www.facebook.com" class="fa fa-facebook"></a>
   <a href="www.twitter.com" class="fa fa-twitter"></a>
