Update Ze About Us.html

--- a/Ze About Us.html
+++ b/Ze About Us.html
@@ -73,7 +73,7 @@ h2 {
 <body bgcolor="e8f1e7">
 
 <div>
-<img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\f1.jpg" 
+<img src="f1.jpg" 
 width= 120px height=85px>
 </div>
 
@@ -95,7 +95,7 @@ width= 120px height=85px>
     <h2> Who We Are </h2>
     <div align="center">
     <p> In today's world, almost every decision we make has an impact on the environment.</br> But understanding which choices are most important for protecting the planet can be overwhelming. </br>That's why we, the students studying digital design in MYP 4, have come together with a mission.</br> We want to create a website that shines a light on the environmental issues we face and offers practical solutions to address them.</p>
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\f2.png" alt="Team Photo" align="center">
+    <img src="f2.png" alt="Team Photo" align="center">
     <p>People in the photo: Mannat Alwa, Rithanyaa TK, Rishit Nagpal, Sonakshi Chavan, Tanishka Sathe, Tushant Avudurthi<br>Our facilitator: Ms. Mridula</p>
 </div>
 </section>
