Update MYP1 Compost Making.html

--- a/MYP1 Compost Making.html
+++ b/MYP1 Compost Making.html
@@ -44,13 +44,13 @@ Compost is a nutrient-rich soil conditioner created through the natural decompos
 
 <div class="row">
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\c1.png" style="width:100%" >
+    <img src="c1.png" style="width:100%" >
   </div>
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\c2.png" style="width:100%">
+    <img src="c2.png" style="width:100%">
   </div>
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\c3.png"style="width:100%">
+    <img src="c3.png"style="width:100%">
   </div>
 </div>
 </body>
