Update MYP3 Paper Bag Project.html

--- a/MYP3 Paper Bag Project.html
+++ b/MYP3 Paper Bag Project.html
@@ -43,13 +43,13 @@ border-radius: 10px;
 
 <div class="row">
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\b1.png" style="width:100%" >
+    <img src="b1.png" style="width:100%" >
   </div>
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\b2.png" style="width:100%">
+    <img src="b2.png" style="width:100%">
   </div>
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\b3.png"style="width:100%">
+    <img src="b3.png"style="width:100%">
   </div>
 </div>
 </body>
