Update PYP Plantation Drive.html

--- a/PYP Plantation Drive.html
+++ b/PYP Plantation Drive.html
@@ -44,10 +44,10 @@ border-radius: 10px;
 
 <div class="row">
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\d1.png" style="width:100%">
+    <img src="d1.png" style="width:100%">
   </div>
   <div class="column">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\d2.png"style="width:100%">
+    <img src="d2.png"style="width:100%">
   </div>
   
 </div>
