--- a/index.html
+++ b/index.html
@@ -193,7 +193,11 @@ h2, p {
     <img src="e1.png" style="width:75%">
   </div>
 </div>
-
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/W5bh1JFo43U?si=D9AFa9ENoBmHNM3_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<a href="https://www.youtube.com/watch?v=W5bh1JFo43U">
+	
+    <img src="thumbnail.jpg" alt="Video Thumbnail">
+</a>
 <div class="icon-bar">
   <!-- Add YouTube icon -->
   <a href="www.youtube.com" class="fa fa-youtube"></a>
