--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ h2, p {
 
 </ul>
 
-  <h2>Welcome to nature nurtures</h2>
+  <h2>Welcome to Nature Nurtures</h2>
 	<h3><marquee>There is no you or I, There is only us</marquee></h2>
   <p>Save the planet
     Play a role in saving our planet by lowering your carbon emissions. <br>
@@ -193,7 +193,7 @@ h2, p {
     <img src="e1.png" style="width:75%">
   </div>
 </div>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/W5bh1JFo43U?si=D9AFa9ENoBmHNM3_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="260" height="215" src="https://www.youtube.com/embed/W5bh1JFo43U?si=D9AFa9ENoBmHNM3_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <a href="https://www.youtube.com/watch?v=W5bh1JFo43U">
 	
     <img src="thumbnail.jpg" alt="Video Thumbnail">
