--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -61,5 +61,9 @@ img:hover {
 
 <h2>---MYP 3 Paper Bag Project---------MYP 1 Compost Making----------PYP Plantation Drive---</h2>
 
+<video width="640" height="360" controls>
+  <source src=".mp4" type="video/mp4">
+  
+</video>
 </body>
 </html>
