--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -62,7 +62,7 @@ img:hover {
 <h2>---MYP 3 Paper Bag Project---------MYP 1 Compost Making----------PYP Plantation Drive---</h2>
 
 <video width="640" height="360" controls>
-  <source src=".mp4" type="video/mp4">
+  <source src="https://github.com/MYP4students/NatureNurtures/blob/main/MYP5%20video.mp4" type="video/mp4">
   
 </video>
 </body>
