--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -45,17 +45,17 @@ img:hover {
 
 <div class="row">
   <div class="column">
-    <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\MYP3 Paper Bag Project.html">
-  <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\a1.png"alt="important"
+    <a href="MYP3 Paper Bag Project.html">
+  <img src="a1.png"alt="important"
  style="width:100%"> </a>
   </div>
   <div class="column">
-    <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\MYP1 Compost Making.html">
-   <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\a2.png" style="width:100%"> </a>
+    <a href="MYP1 Compost Making.html">
+   <img src="a2.png" style="width:100%"> </a>
   </div>
   <div class="column">
-    <a href="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Code\PYP Plantation Drive.html">
-    <img src="C:\Users\rnagp\Desktop\Digital Design\MYP4 DD U3 SA\Website photos\a3.png" style="width:100%"> </a>
+    <a href="PYP Plantation Drive.html">
+    <img src="a3.png" style="width:100%"> </a>
   </div>
 </div>
 
@@ -63,6 +63,7 @@ img:hover {
 
 <video width="640" height="360" controls>
   <source src="https://github.com/MYP4students/NatureNurtures/blob/main/MYP5%20video.mp4" type="video/mp4">
+  <h1>--- MYP5 ECO Friendly Urban Planning Models----</h1>
   
 </video>
 </body>
