--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -59,10 +59,10 @@ img:hover {
   </div>
 </div>
 
-<h2>---MYP 3 Paper Bag Project---------MYP 1 Compost Making----------PYP Plantation Drive---</h2>
+<h2>---MYP 3 Paper Bag Project-------------MYP 1 Compost Making----------------PYP Plantation Drive--------</h2>
 
 <video width="640" height="360" controls>
-  <source src="https://github.com/MYP4students/NatureNurtures/blob/main/MYP5%20video.mp4" type="video/mp4">
+  <source src=" type="video/mp4">
   <h1>--- MYP5 ECO Friendly Urban Planning Models----</h1>
   
 </video>
