--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -59,7 +59,7 @@ img:hover {
   </div>
 </div>
 
-<h2>---MYP 3 Paper Bag Project-------------MYP 1 Compost Making----------------PYP Plantation Drive--------</h2>
+<h1>------------MYP 3 Paper Bag Project-------------MYP 1 Compost Making--------------------PYP Plantation Drive-----------------</h1>
 
 <video width="640" height="360" controls>
   <source src="MYP5 video.mp4" type="video/mp4">
