--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -59,12 +59,15 @@ img:hover {
   </div>
 </div>
 
-<h2>------------MYP 3 Paper Bag Project-------------MYP 1 Compost Making--------------------PYP Plantation Drive-----------------</h2>
+<h2>-------MYP 3 Paper Bag Project--------MYP 1 Compost Making------------PYP Plantation Drive-----------</h2>
+</br>
+</br>  
 
+  <h2>--- MYP5 ECO Friendly Urban Planning Models----</h2>
+  
 <video width="640" height="360" controls>
   <source src="MYP5 video.mp4" type="video/mp4">
-  <h1>--- MYP5 ECO Friendly Urban Planning Models----</h1>
-  
+ 
 </video>
 </body>
 </html>
