--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -59,11 +59,11 @@ img:hover {
   </div>
 </div>
 
-<h3>-------MYP 3 Paper Bag Project--------MYP 1 Compost Making------------PYP Plantation Drive-----------</h3>
+<h2>-----------------MYP 3 Paper Bag Project---------------------MYP 1 Compost Making---------------------PYP Plantation Drive----------------</h2>
 </br>
 </br>  
 
-  <h3>--- MYP5 ECO Friendly Urban Planning Models----</h3>
+  <h2>--- MYP5 ECO Friendly Urban Planning Models----</h2>
   
 <video width="640" height="360" controls>
   <source src="MYP5 video.mp4" type="video/mp4">
