--- a/Recent Projects.html
+++ b/Recent Projects.html
@@ -59,7 +59,7 @@ img:hover {
   </div>
 </div>
 
-<h2>-----------------MYP 3 Paper Bag Project---------------------MYP 1 Compost Making---------------------PYP Plantation Drive----------------</h2>
+<h2>------MYP 3 Paper Bag Project--------MYP 1 Compost Making---------PYP Plantation Drive---------</h2>
 </br>
 </br>  
 
